<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    tools:context=".registration.RegisterActivity">

    <EditText
        android:id="@+id/txtRegisterUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/textfield_rounded_corners"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:padding="15dp"
        android:textColor="@color/dark_purple"
        android:textColorHint="@color/light_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/textfield_rounded_corners"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:lineSpacingExtra="8sp"
        android:padding="15dp"
        android:textColor="@color/dark_purple"
        android:textColorHint="@color/light_purple"
        app:layout_constraintEnd_toEndOf="@+id/txtRegisterUserName"
        app:layout_constraintStart_toStartOf="@+id/txtRegisterUserName"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterUserName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/textfield_rounded_corners"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lineSpacingExtra="8sp"
        android:padding="15dp"
        android:textColor="@color/dark_purple"
        android:textColorHint="@color/light_purple"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnRegisterUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/register_new_user"
        app:backgroundTint="#503737"
        app:layout_constraintEnd_toEndOf="@+id/txtRegisterPassword"
        app:layout_constraintStart_toStartOf="@+id/txtRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterPassword" />

    <TextView
        android:id="@+id/txtAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/already_have_an_account"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/btnRegisterUser"
        app:layout_constraintStart_toStartOf="@+id/btnRegisterUser"
        app:layout_constraintTop_toBottomOf="@+id/btnRegisterUser" />


</androidx.constraintlayout.widget.ConstraintLayout>